--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
+@import "bootstrap/scss/bootstrap";
 
 /**
  * Import layouts
