--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,4 +9,11 @@ $uoc-corporate: #000078;
 $uoc-masterbrand: #73edff;
 $uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
 
+$fons: #F8F7F3;
+$lletra: #0a0906; 
+
 $mqMinWidth: 420px;
+
+$theme-colors: (
+  "primary": #bada55 // posa-hi el codi de color que prefereixis
+);
