--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,5 +1,7 @@
+//https://www.icolorpalette.com/download/shades/eeebe3_color_shades.jpg
 * {
   box-sizing: border-box;
+  border: 1px solid black;
 }
 
 body {
@@ -11,47 +13,88 @@ body {
   font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  background-color: $fons;
+  color: $lletra;
 }
 
-.uoc-container {
+.portada-grid {
   max-width: 800px;
   margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
   text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.uoc-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
-
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
-  }
-}
-
-.uoc-title {
+.torneig-titol {
   font-family: $font-family-serif;
-  font-size: 24px;
   font-weight: 700;
-  color: $uoc-corporate;
+}
 
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
+.torneig-dates {
+  font-family: $font-family-serif;
+}
+
+.torneig-presentacio {
+  font-family: $font-family-serif;
+}
+
+//Portada Grid
+@supports (display: grid){
+  @media (min-width: 550px){
+    .portada-grid {
+      display: grid;
+      grid-template-rows: repeat(7, 1fr);
+      grid-template-columns: repeat(9, 1fr);
+    }
+    .torneig-foto{
+      grid-column: 1 / 10;
+      grid-row: 1 / 7;
+    }
+    .torneig-titol{
+      grid-column: 5;
+      grid-row: 2 / 5;
+      z-index: 2;
+      writing-mode:vertical-rl;
+      color: $fons;
+    } 
+    .torneig-dates{
+      grid-column: 8 / 10;
+      grid-row: 6 / 7;
+      z-index: 2;
+      color: $fons;
+      background-color: red;
+      align-self:flex-end;
+    }
+    .torneig-presentacio{
+      grid-column: 1 / 10;
+      grid-row: 7;
+    }
+    p {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
 }
 
+
+//footer
 .uoc-footer {
   margin-top: 1.5rem;
   font-size: 0.75rem;
   text-align: center;
+}
+
+//header
+
+//nav
+.pages-navigator{
+    display: inline-block;
+
+  ul {
+    display:inline-block;
+    padding-left: 0;
+  }
+
+  ul li {
+    display: inline-block;
+    padding-left: 1rem;
+  }
 }
