--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,20 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="chess-footer">
+    This is the footer. Should it include contact information?
+    <hr>
+    &copy; LOGO
+    <nav class="pages-navigator">
+        <ul>
+            <li><a href="">Front Page</a></li>
+            <li><a href="">Page Two</a></li>
+            <li><a href="">Page Three</a></li>
+            <li><a href="">Page Four</a></li>
+        </ul>
+    </nav>
+    <nav class="pages-navigator">
+        <ul>
+            <li><a href="">Google</a></li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Twitter</a></li>
+        </ul>
+    </nav>
 </footer>
