--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,10 +14,12 @@
  * see: https://v2.parceljs.org/features/module-resolution/
  * see commented examples below
  */
+ @import "npm:@fortawesome/fontawesome-free/css/all.css";
+ @import "bootstrap/scss/bootstrap";
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
-@import "bootstrap/scss/bootstrap";
+
 
 /**
  * Import layouts
