--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,20 +1,28 @@
 <footer class="chess-footer">
-    This is the footer. Should it include contact information?
+    <p>
+        Torneig d'escacs organitzat per Marcel W. 
+    </p>
+    <p>
+        Envia un email a marcelwp@uoc.edu per inscriure't.
+    </p>
     <hr>
-    &copy; LOGO
-    <nav class="pages-navigator">
-        <ul>
-            <li><a href="">Front Page</a></li>
-            <li><a href="">Page Two</a></li>
-            <li><a href="">Page Three</a></li>
-            <li><a href="">Page Four</a></li>
-        </ul>
-    </nav>
-    <nav class="pages-navigator">
-        <ul>
-            <li><a href="">Google</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Twitter</a></li>
-        </ul>
-    </nav>
+    <div class="logo-line">
+        <p>&copy; ESCAC MAT</p>
+        <nav class="pages-navigator">
+            <ul>
+                <li><a href="index.html">Portada</a></li>
+                <li><a href="jugadors.html">Jugadors</a></li>
+                <li><a href="">Page Three</a></li>
+                <li><a href="">Page Four</a></li>
+            </ul>
+        </nav>
+        <nav class="pages-navigator">
+            <ul>
+                <li><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </nav>
+    </div>
+
 </footer>
