--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,10 +1,12 @@
-<footer class="chess-footer">
-    &copy; LOGO
-    <nav class="pages-navigator">
-        <ul>
-            <li><a href="">Page Two</a></li>
-            <li><a href="">Page Three</a></li>
-            <li><a href="">Page Four</a></li>
-        </ul>
-    </nav>
-</footer>
+<header class="chess-footer">
+    <div class="logo-line">
+        <p>&copy; ESCAC MAT</p>
+        <nav class="pages-navigator">
+            <ul>
+                <li><a href="jugadors.html">Jugadors</a></li>
+                <li><a href="">Page Three</a></li>
+                <li><a href="">Page Four</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
