afegida la pagina article

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -126,3 +126,14 @@ body {
   margin-bottom: 0.75rem;
 }
 
+///
+/// SICILIANA
+/// 
+
+.col{
+  min-width: 250px;
+}
+
+.blockquote, .blockquote-footer{
+  margin: 0.5rem;
+}
