--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Portada</a></li>
                 <li><a href="jugadors.html">Jugadors</a></li>
-                <li><a href="">Page Three</a></li>
+                <li><a href="siciliana.html">Siciliana</a></li>
                 <li><a href="">Page Four</a></li>
             </ul>
         </nav>
