--- a/src/views/header.html
+++ b/src/views/header.html
@@ -4,7 +4,7 @@
         <nav class="pages-navigator">
             <ul>
                 <li><a href="jugadors.html">Jugadors</a></li>
-                <li><a href="">Page Three</a></li>
+                <li><a href="siciliana.html">Siciliana</a></li>
                 <li><a href="">Page Four</a></li>
             </ul>
         </nav>
