afegida la quarta pagina

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -5,7 +5,7 @@
             <ul>
                 <li><a href="jugadors.html">Jugadors</a></li>
                 <li><a href="siciliana.html">Siciliana</a></li>
-                <li><a href="">Page Four</a></li>
+                <li><a href="puzzle.html">Apunta't</a></li>
             </ul>
         </nav>
     </div>
