--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -3,7 +3,7 @@
         Torneig d'escacs organitzat per Marcel W. 
     </p>
     <p>
-        Envia un email a marcelwp@uoc.edu per inscriure't.
+        <a href="puzzle.html">Inscriu-te al torneig</a>
     </p>
     <hr>
     <div class="logo-line">
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Portada</a></li>
                 <li><a href="jugadors.html">Jugadors</a></li>
                 <li><a href="siciliana.html">Siciliana</a></li>
-                <li><a href="">Page Four</a></li>
+                <li><a href="puzzle.html">Apunta't</a></li>
             </ul>
         </nav>
         <nav class="pages-navigator">
