--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -3,7 +3,7 @@
         Torneig d'escacs organitzat per Marcel W. 
     </p>
     <p>
-        <a href="puzzle.html">Inscriu-te al torneig</a>
+        T'hi atreveixes?
     </p>
     <hr>
     <div class="logo-line">
