--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,4 +1,4 @@
-<header class="chess-footer">
+<header class="chess-header">
     <div class="logo-line">
         <p>&copy; ESCAC MAT</p>
         <nav class="pages-navigator">
