--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,14 +5,11 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   "Segoe UI Symbol";
 $font-family-serif: "Georgia", "Times New Roman", serif;
 
-$uoc-corporate: #000078;
-$uoc-masterbrand: #73edff;
-$uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
-
 $fons: #F8F7F3;
 $lletra: #0a0906; 
+$links: #dbd5c4;
 
-$mqMinWidth: 420px;
+$mqMinWidth: 550px;
 
 $theme-colors: (
   "primary": #bada55 // posa-hi el codi de color que prefereixis
