--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -140,6 +140,14 @@ a {
   column-gap: 10px;
 }
 
+.GM-name{
+  font-weight: 700;
+}
+
+.GM-body{
+  margin-bottom: 1rem;
+}
+
 /////////////////////////////////////
 /// SICILIANA
 ///////////////////////////////////// 
