--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,4 +1,4 @@
-<footer class="chess-footer">
+<footer class="chess-footer container">
     <p>
         Torneig d'escacs organitzat per Marcel W. 
     </p>
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Portada</a></li>
                 <li><a href="jugadors.html">Jugadors</a></li>
                 <li><a href="siciliana.html">Siciliana</a></li>
-                <li><a href="puzzle.html">Apunta't</a></li>
+                <li><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
         <nav class="pages-navigator">
