--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,11 +1,11 @@
-<header class="chess-header">
+<header class="chess-header container">
     <div class="logo-line">
         <p>&copy; ESCAC MAT</p>
         <nav class="pages-navigator">
             <ul>
                 <li><a href="jugadors.html">Jugadors</a></li>
                 <li><a href="siciliana.html">Siciliana</a></li>
-                <li><a href="puzzle.html">Apunta't</a></li>
+                <li><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
     </div>
