--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -13,16 +13,20 @@ body {
   flex-direction: column;
   height: 100vh;
   margin: 0;
-  padding: 0;
+  padding: 2rem;
   font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 24px;
-  background-color: $fons;
+  background-color: $blanc;
   color: $lletra;
 }
 
 .container {
   max-width: 800px;
+}
+
+.container-center{
+  text-align: center;
 }
 
 a {
@@ -33,61 +37,71 @@ a {
 /// PORTADA
 /// 
 
-.portada{
-  background-color: $links;
-}
-
-.portada-grid {
-  margin: auto;
+.poster {
+  //margin: auto;
   text-align: center;
+  font-family: $font-family-serif;
 }
 
-.torneig-titol {
-  font-family: $font-family-serif;
+.poster__titol {
   font-weight: 700;
-}
-
-.torneig-dates {
-  font-family: $font-family-serif;
-}
-
-.torneig-presentacio {
-  font-family: $font-family-serif;
 }
 
 @supports (display: grid){
   @media (min-width: $mqMinWidth){
-    .portada-grid {
+    .poster {
       display: grid;
-      grid-template-rows: repeat(7, 1fr);
+      grid-template-rows: repeat(8, 1fr);
       grid-template-columns: repeat(9, 1fr);
     }
-    .torneig-foto{
+    .poster__foto{
       grid-column: 1 / 10;
       grid-row: 1 / 7;
     }
-    .torneig-titol{
-      grid-column: 5;
+    .poster__titol{
+      grid-column: 3/8;
       grid-row: 2 / 5;
       z-index: 2;
-      writing-mode:vertical-rl;
-      color: $fons;
+      color: $blanc;
+      letter-spacing: 4px;
     } 
-    .torneig-dates{
-      grid-column: 8 / 10;
+    .poster__dates{
+      grid-column: 6 / 10;
       grid-row: 6 / 7;
       z-index: 2;
-      color: $fons;
+      color: $blanc;
       background-color: red;
       align-self:flex-end;
     }
-    .torneig-presentacio{
+    .poster__participants{
+      grid-column: 1 / 3;
+      grid-row: 5 / 7;
+      z-index: 2;
+      color: $blanc;
+      background-color: black;
+      align-self:flex-end;
+    }
+    .poster__premi{
+      grid-column: 3 / 6;
+      grid-row: 5 / 7;
+      z-index: 2;
+      color: $blanc;
+      background-color: rgb(45, 151, 71);
+      align-self:flex-end;
+    }
+    .poster__presentacio{
       grid-column: 1 / 10;
-      grid-row: 7;
+      grid-row: 7 / 9;
+      align-self: center;
     }
     p {
       margin-top: 0;
       margin-bottom: 0;
+    }
+  }
+  @media (min-width: $mqMediumWidth){
+    .poster{
+      grid-template-rows: repeat(7, 1fr);
     }
   }
 }
