fixed stylelint GM- classes

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -154,11 +154,11 @@ a {
   column-gap: 10px;
 }
 
-.GM-name{
+.gm--name{
   font-weight: 700;
 }
 
-.GM-body{
+.gm--body{
   margin-bottom: 1rem;
 }
 
