--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -8,7 +8,7 @@
     <hr>
     <div class="logo-line">
         <p>&copy; ESCAC MAT</p>
-        <nav class="pages-navigator">
+        <nav class="logo-line__navigator">
             <ul>
                 <li><a href="index.html">Portada</a></li>
                 <li><a href="jugadors.html">Jugadors</a></li>
@@ -16,11 +16,11 @@
                 <li><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
-        <nav class="pages-navigator">
-            <ul>
-                <li><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+        <nav class="logo-line__navigator">
+            <ul class="logo-line__list">
+                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
             </ul>
         </nav>
     </div>
