--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,11 +1,11 @@
-<header class="chess-header container">
+<header class="container chess-header">
     <div class="logo-line">
-        <p>&copy; ESCAC MAT</p>
-        <nav class="pages-navigator">
-            <ul>
-                <li><a href="jugadors.html">Jugadors</a></li>
-                <li><a href="siciliana.html">Siciliana</a></li>
-                <li><a href="apuntat.html">Apunta't</a></li>
+        <p class="logo-line__text">&copy; ESCAC MAT</p>
+        <nav class="logo-line__navigator">
+            <ul class="logo-line__list">
+                <li class="logo-line__list-item"><a href="jugadors.html">Jugadors</a></li>
+                <li class="logo-line__list-item"><a href="siciliana.html">Siciliana</a></li>
+                <li class="logo-line__list-item"><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
     </div>
