--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,4 +1,3 @@
-//https://www.icolorpalette.com/download/shades/eeebe3_color_shades.jpg
 * {
   box-sizing: border-box;
   //border: 1px solid black;
@@ -29,12 +28,14 @@ a {
   text-decoration: none;
 }
 
+.fonts {
+  font-size: 0.9rem;
+}
 
-/// PORTADA
-/// 
-
+/////////////////////////////////////
+///  PORTADA
+/////////////////////////////////////
 .poster {
-  text-align: center;
   font-family: $font-family-serif;
 }
 
@@ -58,14 +59,14 @@ a {
       grid-row: 2 / 5;
       z-index: 2;
       color: $blanc;
-      letter-spacing: 4px;
+      letter-spacing: 5px;
     } 
     .poster__dates{
       grid-column: 6 / 10;
       grid-row: 6 / 7;
       z-index: 2;
       color: $blanc;
-      background-color: red;
+      background-color: $vermell;
       align-self:flex-end;
     }
     .poster__participants{
@@ -81,7 +82,7 @@ a {
       grid-row: 5 / 7;
       z-index: 2;
       color: $blanc;
-      background-color: rgb(45, 151, 71);
+      background-color: rgb(201, 168, 37);
       align-self:flex-end;
     }
     .poster__presentacio{
@@ -111,7 +112,7 @@ a {
   }
 }
 
-.pages-navigator{
+.logo-line__navigator{
   display: inline-block;
 
   ul {
@@ -185,9 +186,9 @@ a {
   grid-column: 2;
 }
 
-/// 
-/// FORM
-/// 
-.formulari .form-group{
+///////////////////////////////////// 
+/// FORMULARI
+///////////////////////////////////// 
+.form-group{
   margin-top: 1rem;
 }
