--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -43,61 +43,113 @@ a {
   font-weight: 700;
 }
 
-@supports (display: grid){
+///////////////////////////////////////
+/// GRID
+///////////////////////////////////// 
+@supports (display: grid){ 
   @media (min-width: $mqMinWidth){
-    .poster {
-      display: grid;
-      grid-template-rows: repeat(8, 1fr);
+    .poster { 
+      display: grid; grid-template-rows: repeat(6, 1fr);
       grid-template-columns: repeat(9, 1fr);
-    }
+    } 
     .poster__foto{
-      grid-column: 1 / 10;
-      grid-row: 1 / 7;
-    }
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+    } 
     .poster__titol{
-      grid-column: 3/8;
+      grid-column: 3 / 8;
       grid-row: 2 / 5;
       z-index: 2;
-      color: $blanc;
-      letter-spacing: 5px;
-    } 
+      color: $blanc; letter-spacing: 5px;
+    }
     .poster__dates{
-      grid-column: 6 / 10;
-      grid-row: 6 / 7;
+      grid-column: 7 / -1;
+      grid-row: 6;
       z-index: 2;
       color: $blanc;
       background-color: $vermell;
-      align-self:flex-end;
+      align-self:flex-end; 
     }
     .poster__participants{
-      grid-column: 1 / 3;
-      grid-row: 5 / 7;
+      grid-column: 1 / 4; 
+      grid-row: 6;
       z-index: 2;
       color: $blanc;
       background-color: black;
       align-self:flex-end;
     }
     .poster__premi{
-      grid-column: 3 / 6;
-      grid-row: 5 / 7;
+      grid-column: 4 / 7;
+      grid-row: 6;
       z-index: 2;
       color: $blanc;
       background-color: rgb(201, 168, 37);
-      align-self:flex-end;
-    }
-    .poster__presentacio{
-      grid-column: 1 / 10;
-      grid-row: 7 / 9;
-      align-self: center;
+      align-self:flex-end; 
     }
     p {
       margin-top: 0;
       margin-bottom: 0;
     }
   }
-  @media (min-width: $mqMediumWidth){
-    .poster{
-      grid-template-rows: repeat(7, 1fr);
+}
+
+/////////////////////////////////////
+/// ALTERNATIVA A GRID
+///////////////////////////////////// 
+
+@supports not (display: grid){
+  @media (min-width: $mqMinWidth) {
+    .poster {
+      position: relative;
+    }
+    .poster__foto {
+      width: 100%;
+      height: calc(100% * 6 / 9);
+    }
+    .poster__titol {
+      position: absolute;
+      top: calc(100% * 1 / 6);
+      left: calc(100% * 2 / 9);
+      width: calc(100% * 5 / 9);
+      height: calc(100% * 3 / 6);
+      z-index: 2;
+      color: $blanc;
+      letter-spacing: 5px;
+    }
+    .poster__dates {
+      position: absolute;
+      bottom: 0;
+      right: 0.75rem;
+      width: calc(100% * 3 / 9);
+      height: calc(100% * 0.5 / 6);
+      z-index: 2;
+      color: $blanc;
+      background-color: $vermell;
+    }
+    .poster__participants {
+      position: absolute;
+      bottom: 0;
+      left: 0.75rem;
+      width: calc(100% * 3 / 9);
+      height: calc(100% * 0.5 / 6);
+      z-index: 2;
+      color: $blanc;
+      background-color: black;
+    }
+    .poster__premi {
+      position:absolute;
+      bottom: 0;
+      left:calc(100% * 3 / 9);
+      width:calc(100% * 3 / 9);
+      height:calc(100% * 0.5 / 6);
+      z-index:2;
+      color:$blanc;
+      background-color:rgb(201,168,37);
+    }
+  
+    p{
+      margin-top: 0;
+      margin-bottom: 0;
     }
   }
 }
