--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,4 +1,4 @@
-<footer class="chess-footer container">
+<footer class="container text-center">
     <p>
         Torneig d'escacs organitzat per Marcel W. 
     </p>
@@ -6,21 +6,21 @@
         T'hi atreveixes?
     </p>
     <hr>
-    <div class="logo-line">
-        <p>&copy; ESCAC MAT</p>
-        <nav class="logo-line__navigator">
-            <ul>
+    <div class="navegacio">
+        <p class="navegacio__text">&copy; ESCAC MAT</p>
+        <nav class="navegacio__pagines">
+            <ul class="navegacio__pagines-llista">
                 <li><a href="index.html">Portada</a></li>
                 <li><a href="jugadors.html">Jugadors</a></li>
                 <li><a href="siciliana.html">Siciliana</a></li>
                 <li><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
-        <nav class="logo-line__navigator">
-            <ul class="logo-line__list">
-                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
-                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
-                <li class="logo-line__list-item"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+        <nav class="navegacio__pagines">
+            <ul class="navegacio__pagines-llista">
+                <li class="navegacio__pagines-element"><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                <li class="navegacio__pagines-element"><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li class="navegacio__pagines-element"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
             </ul>
         </nav>
     </div>
