--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,11 +1,11 @@
-<header class="container chess-header">
-    <div class="logo-line">
-        <p class="logo-line__text">&copy; ESCAC MAT</p>
-        <nav class="logo-line__navigator">
-            <ul class="logo-line__list">
-                <li class="logo-line__list-item"><a href="jugadors.html">Jugadors</a></li>
-                <li class="logo-line__list-item"><a href="siciliana.html">Siciliana</a></li>
-                <li class="logo-line__list-item"><a href="apuntat.html">Apunta't</a></li>
+<header class="container text-center">
+    <div class="navegacio">
+        <p class="navegacio__text">&copy; ESCAC MAT</p>
+        <nav class="navegacio__pagines">
+            <ul class="navegacio__pagines-llista">
+                <li class="navegacio__pagines-element"><a href="jugadors.html">Jugadors</a></li>
+                <li class="navegacio__pagines-element"><a href="siciliana.html">Siciliana</a></li>
+                <li class="navegacio__pagines-element"><a href="apuntat.html">Apunta't</a></li>
             </ul>
         </nav>
     </div>
