--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,8 +1,8 @@
 <footer class="container text-center">
-    <p>
+    <p class="repete">
         Torneig d'escacs organitzat per Marcel W. 
     </p>
-    <p>
+    <p class="repte">
         T'hi atreveixes?
     </p>
     <hr>
@@ -24,5 +24,4 @@
             </ul>
         </nav>
     </div>
-
 </footer>
